# arpes

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: test.yml
src/arpes/: __init__.py
src/arpes/endstations/plugin/: nexus.py
